add target option

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,9 @@
   "background": {
     "service_worker": "background.js"
   },
+  "options_page": "options/index.html",
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "storage"
   ]
 }
