--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,11 @@
 	"name": "open-github-badge",
 	"version": "1.0",
 	"action": {
-		"default_icon": {
-			"32": "images/icon32.png",
-			"128": "images/icon128.png"
-		},
 		"default_title": "Open Github"
+	},
+	"icons": {
+		"32": "/images/icon32.png",
+		"128": "/images/icon128.png"
 	},
 	"background": {
 		"service_worker": "background.js"
